--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
     "gh-pages": "^6.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "zustand": "^4.5.4"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.24.7",
