--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "homepage": "https://traize.github.io/Todo-ts-react-zustand/",
   "scripts": {
-    "dev": "vite",
+    "dev": "concurrently \"npm run server\" \"vite\" ",
     "build": "tsc -b && vite build",
+    "server": "json-server -w server/db.json -p 3001",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "predeploy": "npm run build",
@@ -27,10 +28,12 @@
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
+    "concurrently": "^8.2.2",
     "eslint": "^8.57.0",
     "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "json-server": "^1.0.0-beta.1",
     "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
